# TradingAnalyticsBot

./: .env.example  .gitignore  README.md  backtest.py  consts.py  main.py  pipeline.py  pyproject.toml
src/: analytics.py  backtest.py  consts.py  daily_analytics.py  database.py  debug_data.py  init_db.py  main.py
src/config/: settings.py
src/services/: ai_engine.py  charting.py  market_data.py  notification.py  technical_analysis.py
