[project]
name = "ihsg-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mplfinance>=0.12.10b0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "requests>=2.32.5",
    "yfinance>=1.1.0",
]
